Remove static references to resolution methods on AppInfo
This also introduces a bridge for resolving a method on its holder.

Change-Id: I4737417888f9b2dcd78752cd9a7fa5d863a001fd